[gd_scene load_steps=18 format=3 uid="uid://dtsu1s1hqjpwe"]

[ext_resource type="PackedScene" uid="uid://cp1k7qd5tuerv" path="res://Assets/Cars/ps1bus.glb" id="1_jbgu2"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2_1irh3"]
[ext_resource type="Texture2D" uid="uid://b2ckwhux25x6u" path="res://Assets/Cars/ps1bus_bus_basecolor-nambus_opacity-nambus_opacity.png" id="3_uh6r5"]
[ext_resource type="Script" path="res://Scripts/Scaleing.gd" id="4_7rigt"]
[ext_resource type="PackedScene" uid="uid://cjt276nafqxef" path="res://Objects/chin.tscn" id="4_xdrmp"]
[ext_resource type="PackedScene" uid="uid://dn12v17inox3d" path="res://Assets/People/lefthand.glb" id="5_b3c5m"]
[ext_resource type="PackedScene" uid="uid://bsajmj1nvqkdv" path="res://Objects/hand.tscn" id="5_h1dlh"]
[ext_resource type="Script" path="res://Scripts/chin.gd" id="6_xemy2"]
[ext_resource type="AudioStream" uid="uid://bwijemiwroul2" path="res://Sound/bus-engine-idling.mp3" id="7_ytypd"]
[ext_resource type="AudioStream" uid="uid://bbl036ncc541g" path="res://Sound/engine.mp3" id="8_csldp"]
[ext_resource type="AudioStream" uid="uid://dcmgj4f36uqvy" path="res://Sound/boost.mp3" id="9_modue"]
[ext_resource type="AudioStream" uid="uid://dmrr4h5ublbgc" path="res://Sound/swoosh.mp3" id="10_jp8pa"]

[sub_resource type="Shader" id="Shader_yo7jv"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.1.2.stable's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_disabled,diffuse_toon,specular_toon,alpha_to_coverage_and_one;
uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color,filter_linear_mipmap,repeat_enable;
uniform float alpha_scissor_threshold;
uniform float alpha_antialiasing_edge;
uniform ivec2 albedo_texture_size;
uniform float point_size : hint_range(0,128);
uniform float roughness : hint_range(0,1);
uniform sampler2D texture_metallic : hint_default_white,filter_linear_mipmap,repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r,filter_linear_mipmap,repeat_enable;
uniform float specular;
uniform float metallic;
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
}






void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	float metallic_tex = dot(texture(texture_metallic,base_uv),metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	vec4 roughness_texture_channel = vec4(1.0,0.0,0.0,0.0);
	float roughness_tex = dot(texture(texture_roughness,base_uv),roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
	SPECULAR = specular;
	ALPHA *= albedo.a * albedo_tex.a;
	ALPHA_SCISSOR_THRESHOLD = alpha_scissor_threshold;
	ALPHA_ANTIALIASING_EDGE = alpha_antialiasing_edge;
	ALPHA_TEXTURE_COORDINATE = UV * vec2(albedo_texture_size);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yhh6l"]
render_priority = 0
shader = SubResource("Shader_yo7jv")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/alpha_scissor_threshold = 0.528
shader_parameter/alpha_antialiasing_edge = 1.0
shader_parameter/albedo_texture_size = Vector2i(512, 512)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/texture_albedo = ExtResource("3_uh6r5")

[sub_resource type="BoxShape3D" id="BoxShape3D_5ndt1"]
size = Vector3(1.5, 16, 12)

[sub_resource type="BoxShape3D" id="BoxShape3D_irceh"]
size = Vector3(7, 7, 12)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bw3sa"]
height = 7.59
radius = 1.2

[node name="ps1bus" instance=ExtResource("1_jbgu2")]
script = ExtResource("2_1irh3")

[node name="Bus" parent="." index="0"]
transform = Transform3D(-1, -2.40493e-11, -8.74228e-08, 0, 1, -0.000275091, 8.74228e-08, -0.000275091, -1, 0.0357712, 0.0224573, 0)
material_override = SubResource("ShaderMaterial_yhh6l")
script = ExtResource("4_7rigt")

[node name="bus_wheel_fr" parent="Bus" index="0"]
transform = Transform3D(-1, -6.55263e-11, -7.53863e-08, -3.82295e-08, 0.862319, 0.506366, 6.49739e-08, 0.506366, -0.862319, -3.11049, -1.03461, 9.29665)

[node name="bus_wheel_fl" parent="Bus" index="1"]
transform = Transform3D(-1, -2.40638e-11, -8.74228e-08, 0, 1, -0.000275258, 8.74228e-08, -0.000275258, -1, 3.11049, -1.03461, 9.29665)

[node name="bus_wheel_rl" parent="Bus" index="2"]
transform = Transform3D(-1, -4.88509e-08, 7.25006e-08, 0, -0.82931, -0.558789, 8.74228e-08, -0.558789, 0.82931, 3.11049, -1.06797, -4.26882)

[node name="bus_wheel_rr" parent="Bus" index="3"]
transform = Transform3D(-1, 4.40173e-08, -4.72347e-08, 6.35293e-08, 0.540302, -0.841471, -1.15182e-08, -0.841471, -0.540302, -3.11049, -1.08051, -4.26882)

[node name="squashed" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.151247, 4.35106, -5.66613)
shape = SubResource("BoxShape3D_5ndt1")

[node name="body" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.021841, 2.30325, -5.52148)
shape = SubResource("BoxShape3D_irceh")

[node name="front" type="CollisionShape3D" parent="." index="3"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.951219, -9.30378)
shape = SubResource("CylinderShape3D_bw3sa")

[node name="back" type="CollisionShape3D" parent="." index="4"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, -0.951219, -1.13449)
shape = SubResource("CylinderShape3D_bw3sa")

[node name="FrontRay" type="RayCast3D" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.54899, -9.44073)
collide_with_areas = true

[node name="RearRay" type="RayCast3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.54899, -1.07895)
collide_with_areas = true

[node name="chin" parent="." index="7" instance=ExtResource("4_xdrmp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.82274, 0.202927, -6.84845)
visible = false
motion_scale = 0.001
animate_physical_bones = false
script = ExtResource("6_xemy2")

[node name="lefthand" parent="." index="8" instance=ExtResource("5_b3c5m")]
transform = Transform3D(-0.921764, 0.344501, 2.83402, 2.71882, 1.01436, 0.760991, -0.870849, 2.80221, -0.623879, -3.20964, 1.46206, -8.48104)
visible = false

[node name="hand" parent="." index="9" instance=ExtResource("5_h1dlh")]
transform = Transform3D(-0.841633, -1.00495, -2.69847, -2.84003, 0.753703, 0.605096, 0.47525, 2.72434, -1.16281, -0.699908, 3.05453, -8.8744)
visible = false

[node name="audio" type="Node3D" parent="." index="10"]

[node name="idle" type="AudioStreamPlayer3D" parent="audio" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.16635, -9.68707)
stream = ExtResource("7_ytypd")

[node name="moving" type="AudioStreamPlayer3D" parent="audio" index="1"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10.1474)
stream = ExtResource("8_csldp")
volume_db = 30.0
unit_size = 60.4

[node name="boost" type="AudioStreamPlayer3D" parent="audio" index="2"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.16635, -9.68707)
stream = ExtResource("9_modue")

[node name="slow" type="AudioStreamPlayer3D" parent="audio" index="3"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.8384)
stream = ExtResource("10_jp8pa")
autoplay = true
